<resources>
    <string name="app_name">praktikum1t1</string>
    <string name="nama">Muhammad Ikram Hidayat</string>
    <string name="nim">H071211030</string>
    <string name="jrepo">10</string>
    <string name="jfowers">4665</string>
    <string name="jfowing">465</string>
    <string name="repo">Repositories</string>
    <string name="fowers">Followers</string>
    <string name="fowing">Following</string>
    <string name="about">About</string>
    <string name="tabout">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper.Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</string>
</resources>